--- a/src/less/kmd.less
+++ b/src/less/kmd.less
@@ -1,6 +1,7 @@
 ﻿
 @import "normalize.less"; // v3.0.3 github.com/necolas/normalize.css
 @import "base.less";
+@import "navigation.less";
 @import "grid.less";
 
 // CSS components
