--- a/src/less/button.less
+++ b/src/less/button.less
@@ -31,37 +31,82 @@
   &::-moz-focus-inner {
     border: 0;
   }
+
+  &.btn-icon {
+    border-radius: 50%;
+    font-size: 24px;
+    height: 32px;
+    margin-left: 0;
+    margin-right: 0;
+    min-width: 32px;
+    width: 32px;
+    padding: 0;
+    overflow: hidden;
+    color: inherit;
+    line-height: normal;
+
+    .material-icons {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-12px,-12px);
+      line-height: 24px;
+      width: 24px;
+    }
+  }
+
+  &.btn-fab {
+    border-radius: 50%;
+    font-size: 24px;
+    height: 56px;
+    margin: auto;
+    min-width: 56px;
+    width: 56px;
+    padding: 0;
+    overflow: hidden;
+    background: rgba(158,158,158,.2);
+    box-shadow: 0 1px 1.5px 0 rgba(0,0,0,.12),0 1px 1px 0 rgba(0,0,0,.24);
+    position: relative;
+    line-height: normal;
+
+    &:active {
+      box-shadow: 0 4px 5px 0 rgba(0,0,0,.14),
+                  0 1px 10px 0 rgba(0,0,0,.12),
+                  0 2px 4px -1px rgba(0,0,0,.2);
+      //background-color: rgba(158,158,158,.4);
+    }
+  }
   
-  &.btn-raised {
+  &.btn-raised {  
     background-color:rgba(158,158,158,.2);
     .shadow-2dp();
 
-    &:hover {
+    /*&:hover {
       background-color: rgba(158,158,158,.2);
-    }
+    }*/
 
     /*&:focus:not(:active) {
       background-color: rgba(0,0,0,.12);
     }*/
 
     &:active {
-      background-color: rgba(158,158,158,.4);
+      //background-color: rgba(158,158,158,.4);
       .shadow-4dp();
     }
   }
 
   &.btn-flat {
-    &:hover {
+    /*&:hover {
       background-color: rgba(158,158,158,.2);
-    }
+    }*/
 
     /*&:focus:not(:active) {
       background-color: rgba(0,0,0,.12);
     }*/
 
-    &:active {
+    /*&:active {
       background-color: rgba(158,158,158,.4);
-    }
+    }*/
   }
 
   &.btn-card-menu {
@@ -78,7 +123,17 @@
     line-height: normal;
   }
 
-  
+  &:hover {
+    background-color: rgba(158,158,158,.2);
+  }
+
+  /*&:focus:not(:active) {
+    background-color: rgba(0,0,0,.12);
+  }*/
+
+  &:active {
+    background-color: rgba(158,158,158,.4);
+  }
 }
 
 input.btn[type="submit"] {
