--- a/src/less/card.less
+++ b/src/less/card.less
@@ -1,5 +1,30 @@
 ﻿.card {
+  position: relative;
   border-radius: 3px;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
   background-color: #FFFFFF;
+
+  .card-menu {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+  }
+
+  .card-title {
+    padding: 16px;
+    font-size: 24px;
+  }
+
+  .card-inner {
+    padding: 16px;
+  }
+
+  .card-border {
+    border-top: 1px solid rgba(0,0,0,.1);
+  }
+
+  // Det er her knapperne skal være
+  .card-actions {
+    padding: 8px;
+  }
 }
