--- a/src/less/navigation.less
+++ b/src/less/navigation.less
@@ -7,10 +7,28 @@ nav {
   ul {
     padding-left: 0;
     list-style-type: none;
+    margin: 0;
   }
 
   li {
     display: inline-block;
+  }
+}
+
+.nav-wrap {
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+}
+
+.nav-link {
+  display: inline-block;
+  height: 60px;
+  line-height: 68px;
+  background-color: transparent;
+  border-bottom: 4px solid transparent;
+  text-decoration: none;
+  color: #757575;
+  &:hover, &[aria-selected="true"] {
+    border-bottom: 4px solid #8bc34a;
   }
 }
 
