--- a/src/less/button.less
+++ b/src/less/button.less
@@ -18,7 +18,7 @@
     letter-spacing: 0;
     overflow: hidden;
     will-change: box-shadow,transform;
-    transition: box-shadow 0.2s @animation-curve-fast-out-linear-in,
+    transition: box-shadow 0.2s @animation-curve-default,
                 background-color 0.2s @animation-curve-default,
                 color 0.2s @animation-curve-default;
     outline: none;
