--- a/src/less/card.less
+++ b/src/less/card.less
@@ -1,8 +1,8 @@
 ﻿.card {
   position: relative;
   border-radius: 3px;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
-  background-color: #FFFFFF;
+  background-color: @color-white;
+  .shadow-2dp();
 
   .card-menu {
     position: absolute;
