--- a/src/less/kmd.less
+++ b/src/less/kmd.less
@@ -3,6 +3,10 @@
 @import "base.less";
 @import "navigation.less";
 @import "grid.less";
+@import "layout.less";
+
+@import "table.less";
+@import "shadow.less";
 
 // CSS components
 @import "button.less";
